2004-07-22  Christophe Fergeau <teuf@gnome.org>

	* libgnomevfs/gnome-vfs-utils.c: lower case the uri scheme before
	  looking for a handler for it.
	* doc/tmpl/gnome-vfs-result.sgml: sync with gnome-vfs-result.h changes

2004-07-22  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/egg*.[ch]: sync up from libegg again
	(fixes bug 148182 again)

2004-07-22  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/egg*.[ch]: sync up from libegg
	(fixes bug 148182)

2004-07-22  Christian Kellner <gicmo@gnome-de.org>

	* modules/http-neon-method.c: Reordered some debugging
	statements and set debugging to be off as default.
	Fixed small typo.
	
2004-07-22  Dave Camp  <dave@novell.com>

	* configure.in: post-release version bump

=== gnome-vfs 2.7.4 ===

2004-07-22  Ray Strode  <rstrode@redhat.com>

	* imported/neon/Makefile.am:
	* test/test-mime-info-cache.c:
	Small build fixes for distcheck

2004-07-22  Dave Camp  <dave@novell.com>

	* configure.in:
	* libgnomevfs/gnome-vfs-result.c:
	* libgnomevfs/gnome-vfs-result.h:
	* modules/Makefile.am:
	* modules/http-neon-method.c:
	* modules/http-proxy.c:
	* modules/http-proxy.h: neon http method from Christian 
	Kellner <gicmo@gnome-de.org>.

2004-07-22  Dave Camp  <dave@novell.com>

	* libgnomevfs/gnome-vfs-result.c: Add missing comma

2004-07-21  Dave Camp  <dave@novell.com>

	* Merged MIME_DESKTOP_REWRITE branch.

2004-07-21  Dave Camp  <dave@novell.com>

	* libgnomevfs/gnome-vfs-mime-info-cache.c:
	(gnome_vfs_mime_info_cache_dir_init),
	(gnome_vfs_mime_info_cache_dir_init_defaults_list),
	(gnome_vfs_mime_info_cache_dir_new),
	(gnome_vfs_mime_info_cache_dir_free),
	(gnome_vfs_mime_info_cache_update_dir_lists): Fix up
	the monitor creation/destruction.

2004-07-20  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/gnome-vfs-mime.[ch]: 
	(gnome_vfs_mime_info_cache_reload),
	(gnome_vfs_mime_reload):
	Add cache flushing functions to module headers.

2004-07-20  Ray Strode  <rstrode@redhat.com>
